[gd_scene load_steps=2 format=3 uid="uid://bmywob5ku4c3r"]

[ext_resource type="Script" uid="uid://yegm8nhcoeqc" path="res://Gui/factory_window.gd" id="1_rucvl"]

[node name="factory_window" type="Window"]
initial_position = 1
size = Vector2i(500, 400)
script = ExtResource("1_rucvl")

[node name="Cargo_Node" type="Control" parent="."]
layout_mode = 3
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -210.0
offset_top = -120.0
offset_right = -170.0
offset_bottom = -80.0
grow_horizontal = 0
grow_vertical = 2

[node name="Cargo_List" type="ItemList" parent="Cargo_Node"]
layout_mode = 0
offset_right = 300.0
offset_bottom = 300.0
focus_mode = 0

[node name="ColorRect" type="ColorRect" parent="Cargo_Node"]
layout_mode = 0
offset_top = -40.0
offset_right = 300.0
color = Color(0.18359, 0.18359, 0.18359, 1)

[node name="Label" type="Label" parent="Cargo_Node/ColorRect"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Cargo List:"

[node name="Name" type="RichTextLabel" parent="."]
offset_right = 750.0
offset_bottom = 40.0
bbcode_enabled = true
scroll_active = false

[node name="Price_Node" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 30.0
offset_top = 80.0
offset_right = 70.0
offset_bottom = 120.0

[node name="Price_List" type="ItemList" parent="Price_Node"]
layout_mode = 0
offset_right = 200.0
offset_bottom = 300.0
focus_mode = 0

[node name="ColorRect" type="ColorRect" parent="Price_Node"]
layout_mode = 0
offset_top = -40.0
offset_right = 200.0
color = Color(0.18359, 0.18359, 0.18359, 1)

[node name="Label" type="Label" parent="Price_Node/ColorRect"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Local Prices:"

[node name="Cash" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
